# serengeti

./: LICENSE.txt  README.md  pyproject.toml
src/serengeti/: __about__.py  app.py
tests/: __init__.py
